--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "dev": "i18nexus pull --path ./src/modules/translations/messages && next dev",
+    "build": "i18nexus pull --path ./src/modules/translations/messages && next build",
+    "start": "i18nexus pull --path ./src/modules/translations/messages && next start",
     "lint": "next lint",
     "prepare": "husky"
   },
   "dependencies": {
+    "i18nexus-cli": "^3.5.0",
     "next": "15.1.4",
+    "next-intl": "^3.26.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
