--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@iconify/json": "^2.2.294",
+    "@iconify/tailwind": "^1.2.0",
+    "@nextui-org/react": "^2.6.11",
+    "framer-motion": "^11.17.0",
     "i18nexus-cli": "^3.5.0",
     "next": "15.1.4",
     "next-intl": "^3.26.3",
