--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nextui-org/react": "^2.6.11",
     "@types/crypto-js": "^4.2.2",
     "@types/js-cookie": "^3.0.6",
+    "axios": "^1.7.9",
     "crypto-js": "^4.2.0",
     "framer-motion": "^11.17.0",
     "i18nexus-cli": "^3.5.0",
