feat(docs): Update README and environment template for frontend setup

--- a/.env.template
+++ b/.env.template
@@ -1,1 +1,5 @@
-I18NEXUS_API_KEY=""
+# i18 Nexus
+I18NEXUS_API_KEY="kcUOTvpsii6GXAG3J0QnqQ"
+
+# Backend url
+NEXT_PUBLIC_BACKEND_URL="http://localhost:3001"
