--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint",
     "prepare": "husky"
   },
+  "packageManager": "bun@1.1.12",
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@nextui-org/react": "^2.6.11",
